@@ -139,14 +139,15 @@ class CommandServe(Command):
             httpd = OurHTTP((options['address'], options['port']),
                             OurHTTPRequestHandler)
             sa = httpd.socket.getsockname()
-            self.logger.info("Serving HTTP on {0} port {1}...".format(*sa))
+            if ipv6:
+                server_url = "http://[{0}]:{1}/".format(*sa)
+            elif sa[0] == '0.0.0.0':
+                server_url = "http://127.0.0.1:{1}/".format(*sa)
+            else:
+                server_url = "http://{0}:{1}/".format(*sa)
+            self.logger.info("Serving on {0} ...".format(server_url))
+
             if options['browser']:
-                if ipv6:
-                    server_url = "http://[{0}]:{1}/".format(*sa)
-                elif sa[0] == '0.0.0.0':
-                    server_url = "http://127.0.0.1:{1}/".format(*sa)
-                else:
-                    server_url = "http://{0}:{1}/".format(*sa)
                 self.logger.info("Opening {0} in the default web browser...".format(server_url))
                 webbrowser.open(server_url)
             if options['detach']:
